# A-Platformer-Game-by-Richard-and-Tim

./: .gitmodules  A Platformer Game by Richard and Tim.sln  CMakeLists.txt  Platformer.cpp
A Platformer Game by Richard and Tim/: A Platformer Game by Richard and Tim.vcxproj  A Platformer Game by Richard and Tim.vcxproj.filters  ImageStore.cpp  ImageStore.h  Mechanics.h  Platformer.cpp  SpriteSheetStore.cpp  SpriteSheetStore.h  TestCreature.h  TestEntities.h  TestMap.h  TestObstacles.h  TestSpace.h  TestUI.h  bulbous.h  character.cpp  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  destructible.h  entity.cpp  entity.h  event.cpp  event.h  gui.h  intermob.h  item.cpp  map.cpp  map.h  obstacle.cpp  obstacle.h  obstruction.cpp  obstruction.h  renderable.h  space.cpp  space.h  spritesheet.cpp  spritesheet.h  sprudo.h  (+6 more)
A Platformer Game by Richard and Tim/images/: bird.spritesheet  bug.spritesheet  bulbous.spritesheet  char1.spritesheet  playchar.spritesheet  playchar.spritesheet.txt  sheepster.spritesheet.txt  sprudo.spritesheet  woim.spritesheet
graphics/: CMakeLists.txt  ImageStore.cpp  ImageStore.h  SpriteSheetStore.cpp  SpriteSheetStore.h  imagespath.h  imagespath.h.in  spritesheet.cpp  spritesheet.h
images/: bird.spritesheet  char1.spritesheet  hermannhorst.spritesheet  playerchar.spritesheet  sheepster.spritesheet  sprudo.spritesheet
inventory/: CMakeLists.txt  item.h
mechanics/: CMakeLists.txt  character.h  creature.h  destructible.h  entity.h  intermob.h  map.h  obstruction.cpp  obstruction.h  player.cpp  player.h  space.cpp  space.h
physics/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  CircleBody.cpp  CircleBody.hpp  Collision.hpp  CollisionDetection.cpp  CollisionDetection.hpp  Constraint.cpp  Constraint.hpp  ConvexBody.cpp  ConvexBody.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  RasterBody.cpp  RasterBody.hpp  RectangleBody.cpp  RectangleBody.hpp  RigidBody.hpp  Vec2.hpp  collision.cpp  collision.h  physengine.h  rigidbody.cpp  rigidbody.h  vec2.cpp  vec2.h
ui/: CMakeLists.txt  PhysicsTestUI.h  TestUI.cpp  TestUI.h  fontspath.h
worlds/: CMakeLists.txt
worlds/physicstest/: CMakeLists.txt  physicstest.h
worlds/testworld/: CMakeLists.txt  HermannHorst.cpp  HermannHorst.h  TestEntities.h  TestObstacles.h  TestSpace.h  TreeZone.h  sprudo.h  testbird.cpp  testbird.h  testbug.cpp  testbug.h  testcharacter.cpp  testcharacter.h  testworm.cpp  testworm.h
